Removed "standard" doclet because it just delegated to HtmlDoclet, removed toolkit use warning
git-svn-id: http://lawu.googlecode.com/svn@20 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/src/lawu/doclets/formats/html/markup/package.html
+++ b/trunk/src/lawu/doclets/formats/html/markup/package.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>com.sun.tools.doclets.formats.html.markup package</title>
+<title>lawu.doclets.formats.html.markup package</title>
 <!--
  @(#)package.html	1.5 03/12/19
  
