--- a/trunk/src/lawu/doclets/formats/html/package.html
+++ b/trunk/src/lawu/doclets/formats/html/package.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>com.sun.tools.doclets.formats.html package</title>
+<title>lawu.doclets.formats.html package</title>
 <!--
  @(#)package.html	1.6 03/12/19
  
