--- a/trunk/src/lawu/doclets/internal/toolkit/package.html
+++ b/trunk/src/lawu/doclets/internal/toolkit/package.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>com.sun.tools.doclets.internal.toolkit package</title>
+<title>lawu.doclets.internal.toolkit package</title>
 <!--
  @(#)package.html	1.6 03/12/19
  
@@ -16,20 +16,20 @@
         <ul>
             <li> 
                 The main driver class should extend 
-                {@link com.sun.tools.doclets.internal.toolkit.AbstractDoclet}.
+                {@link lawu.doclets.internal.toolkit.AbstractDoclet}.
             </li>
             <li> 
                 The doclet configuration class should extend 
-                {@link com.sun.tools.doclets.internal.toolkit.Configuration}.
+                {@link lawu.doclets.internal.toolkit.Configuration}.
             </li>
             <li> 
                 The doclet should have a writer factory that implements
-                {@link com.sun.tools.doclets.internal.toolkit.WriterFactory}.  
+                {@link lawu.doclets.internal.toolkit.WriterFactory}.  
                 This class constructs writers that write doclet specific output.
             </li>
             <li> 
                 The doclet should have a taglet writer that extends
-                {@link com.sun.tools.doclets.internal.toolkit.taglets.TagletWriter}. 
+                {@link lawu.doclets.internal.toolkit.taglets.TagletWriter}. 
                  This writer determines how to output each given tag.
             </li>
     </body>
