--- a/trunk/src/lawu/doclets/internal/toolkit/util/links/package.html
+++ b/trunk/src/lawu/doclets/internal/toolkit/util/links/package.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>com.sun.tools.doclets.interal.toolkit.util.links package</title>
+<title>lawu.doclets.interal.toolkit.util.links package</title>
 <!--
  @(#)package.html	1.5 03/12/19
  
