--- a/trunk/src/lawu/doclets/package.html
+++ b/trunk/src/lawu/doclets/package.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>com.sun.tools/doclets package</title>
+<title>lawu.doclets package</title>
 <!--
  @(#)package.html	1.6 03/12/19
  
@@ -10,6 +10,6 @@
 </head>
 <body bgcolor="white">
         As of JDK version 1.5, replaced by 
-        {@link com.sun.tools.doclets.internal.toolkit.util}.
+        {@link lawu.doclets.internal.toolkit.util}.
     </body>
 </html>
