--- a/trunk/src/lawu/doclets/internal/toolkit/util/package.html
+++ b/trunk/src/lawu/doclets/internal/toolkit/util/package.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>com.sun.tools.doclets.internal.toolkit.util package</title>
+<title>lawu.doclets.internal.toolkit.util package</title>
 <!--
  @(#)package.html	1.6 03/12/19
  
